--- a/lang/en-us.json
+++ b/lang/en-us.json
@@ -1,7 +1,10 @@
 {
     "login-name": "Now login name: ",
+    "server-added": "Added server:",
+    "member-count": "Total reach:",
     "create-channel-name": "'s channel",
     "when-channel-create": " Created a temp voice channel",
+    "unknown-command": "**`Unknown command. Type \".menu\" for help`**",
     "usage": " Usage:",
     "uses": " Uses:",
     "temp-message": " Send a temp message",
@@ -11,11 +14,11 @@
     "activity-changed": " activity of bot have been changed to",
     "channel-copied": " has been copied",
     "channel-copied-deleted": " has been copied and deleted",
-    "reloaded": " Config and language have been reloaded!",
+    "reloaded": " All settings and language have been reloaded!",
     "permission-error": " You do not have any permission!",
     "language-error": " This language file does not exist!",
     "reset-error": " This command needs to enable debug mode to execute!",
-    "not-owner": " This command can only be executed by the server owner!",
+    "not-owner": " This command can only be executed by the bot owner!",
     "message-clear-tip": "Delete ",
     "message-clear-tip-count": " message",
     "message-cleared": " messages have been deleted!",
@@ -59,12 +62,53 @@
     "chat-filter-reason": "inappropriate remarks",
     "send-fail": "Failed to send message.",
     "send-success": "Message sent successfully.",
+    "send-fail-reason": "Usually because the recipient only receives private messages from friends",
     "prefix-tip": "command prefix:",
     "function-enable": "Function enabled",
     "function-disable": "Function disabled",
     "function-command-enable": "Command enabled",
     "function-command-disable": "Command disabled",
     "function-None": "None",
+    "set-picture-only-channel": "Set up no text channel\n(Can only send pictures or files)",
+    "set-chat-filter": "Set up chat filter",
+    "set-enter-voice-channel": "Set up private voice channel entry channel",
+    "set-voice-category": "Set up private voice channel category\n(Private voice channel will be created in this category)",
+    "set-auto-action": "Set the number of automatic actions\n(Auto mute/kick/ban when the number of warnings reaches the set value)",
+    "set-chat-filter-action": "Set trigger chat filter action\n(Action when member triggers chat filter (warn/mute/kick/ban))",
+    "set-music-bot": "Set music bot on/off",
+    "set-commands": "Set each command on/off\nThe command name can be viewed with `!function`",
+    "check-chat-filter": "Check chat filter content",
+    "check-picture-only-channel": "Check the channel without text\n(Can only send pictures or files)",
+    "check-private-voice-channel": "Check private voice channel related messages",
+    "check-auto-action": "Check the number of auto actions\n(Auto mute/kick/ban when the number of warnings reaches the set value)",
+    "add-picture-only-channel": "Added ID to picture-only channel",
+    "remove-picture-only-channel": "Removed ID from picture-only channel",
+    "add-chat-filter": "Added expression to chat filter",
+    "add-chat-filter-next": "Next, please set the trigger chat filter action:\n(The action when the member triggers the chat filter (warn/mute/kick/ban))",
+    "remove-chat-filter": "Remove expression from chat filter",
+    "add-enter-voice-channel": "Added ID to private voice channel entry channel",
+    "remove-enter-voice-channel": "Removed ID from private voice channel entry channel",
+    "add-enter-voice-channel-next": "Next, please set the private voice channel category:\n(Private voice channel will be created in this category)",
+    "add-voice-category": "Added ID to create private voice channel category",
+    "remove-voice-category": "Removed ID from create private voice channel category",
+    "chat-filter-info": "Chat content containing the following expressions will be removed:",
+    "picture-only-channel-info": "The following channels can only send pictures or files:",
+    "private-voice-channel-info": "A private voice channel will be created when entering the following voice channels:",
+    "auto-action-info": "Auto mute/kick/ban when a member's warning count reaches the following number:",
+    "private-voice-channel-category-info": "Private voice channel will be created on:",
+    "add-auto-action": "Number of auto actions set:",
+    "set-auto-mute": "Auto mute ",
+    "set-auto-kick": "\nAuto kick ",
+    "set-auto-ban": "\nAuto ban ",
+    "add-auto-action-error-1": "The number of auto kick cannot be less than the number of auto mute!",
+    "add-auto-action-error-2": "The number of auto ban cannot be less than the number of auto kick!",
+    "add-chat-filter-action": "The trigger chat filter action has been set:",
+    "set-music-bot-true": "Music bot function enabled",
+    "set-music-bot-false": "Music bot function disable",
+    "set-command-error": "Please enter the correct command name",
+    "set-command-to": " command function has been set to ",
+    "command-disabled": " This command has been disabled",
+    "command-set-tip": "Use `.set` to enable this command",
 
     "user-info": "User Information",
     "user-info-name": "Name",
@@ -87,8 +131,9 @@
     "next-page": "next page",
     "previous-page": "previous page",
     "menu-music": "Music bot command",
-    "menu-message-addadmin": "Add a member to the administrator list",
-    "menu-message-addbypass": "Add a member to the bypass list",
+    "menu-message-add": "add ID / text to specific function",
+    "menu-message-addadmin": "add a member to the administrator list",
+    "menu-message-addbypass": "add a member to the bypass list",
     "menu-message-ban": "ban a member",
     "menu-message-clear": "delete the message",
     "menu-message-chlang": "change the language for bot",
@@ -98,14 +143,17 @@
     "menu-message-clearwarn": "clear the warnings for member",
     "menu-message-cd": "delete current channel",
     "menu-message-ci": "make current channel unavailable to other members",
+    "menu-message-check": "Check specific features",
     "menu-message-exit": "end the bot",
     "menu-message-gay": "get the gay level for member",
     "menu-message-kick": "kick a member from server",
     "menu-message-mute": "mute a member",
     "menu-message-ping": "ping an IP address",
     "menu-message-reload": "reload the config and language file",
+    "menu-message-remove": "remove ID / text from specific function",
     "menu-message-removeadmin": "remove a member from the administrator list",
     "menu-message-removebypass": "remove a member from the bypass list",
+    "menu-message-set": "server setting",
     "menu-message-showwarn": "show warnings for member",
     "menu-message-slowmoe": "set the slow mode delay for channel",
     "menu-message-send": "Sending private messages to member with bot.",
@@ -143,8 +191,8 @@
     "music-unfavorite": "Remove from my favorites",
     "music-url-error": "Please type a right url.",
     "music-user-not-in-channel": "Please join a voice channel first.",
-    "music-playing": "Now repeat playing... ",
-    "music-playing-repeat": "正在循环播放... ",
+    "music-playing": "Now playing... ",
+    "music-playing-repeat": "Now repeat playing... ",
     "music-uploader": "Uploader",
     "music-duration": "Duration",
     "music-like_count": "Like count",
@@ -185,16 +233,23 @@
     "debug-enabled": "Debug mode: enabled",
     "debug-disabled": "Debug mode: disabled",
     "version": "Now version:",
+    "view-more_info": "View more information",
     "@user": " [@user]",
     "message": " [message]",
     "language": " [language file name]",
     "count": " [count]",
     "reason": " (reason)",
     "someone's": "'s",
-    "category": " [channel ID]",
+    "channel": " [channel ID]",
+    "category": " [category ID]",
     "duration": " [duration]",
+    "regex": " [text(using regex)/default]",
+    "action": " [None/warn/mute/kick/ban]",
     "enable": "enabled",
     "disable": "disabled",
+    "by": "By:",
+    "true_or_false": " [true/false]",
+    "command": " [command name]",
 
     "ping-timeout": "Request timed out.",
     "with_32_bytes": "with 32 bytes of data",
@@ -207,5 +262,10 @@
     "ping_stat": "Ping statistics:",
     "packet": "Packets: Sent = 4, Received = ",
     "lost": ", Lost = ",
-    "lost_%": "% loss"
+    "lost_%": "% loss",
+
+    "safety_check": "Safety Check",
+    "google_check": " Checked by Google:",
+    "somesafe": " **Partially unsafe**",
+    "unsafe": " **Unsafe**"
 }
