--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -1,7 +1,10 @@
 {
     "login-name": "目前登入身份：",
+    "server-added": "已加入伺服器:",
+    "member-count": "总触及人数:",
     "create-channel-name": " 的频道",
     "when-channel-create": " 建立了临时语音频道",
+    "unknown-command": "**`未知的指令. 使用 \".menu\" 来获得帮助`**",
     "usage": " 用法:",
     "uses": " 用途:",
     "temp-message": " 发送一个临时讯息",
@@ -11,11 +14,11 @@
     "activity-changed": " 机器人状态已更改为",
     "channel-copied": " 频道已被复制",
     "channel-copied-deleted": " 频道已被复制及删除",
-    "reloaded": " 设定档及语言档已重新加载!",
+    "reloaded": " 所有设定及语言档已重新加载!",
     "permission-error": " 拒绝不符权限的操作",
     "language-error": " 该语言档不存在!",
     "reset-error": " 此指令需开启侦错模式才能执行!",
-    "not-owner": " 此指令只有伺服器拥有者才能执行!",
+    "not-owner": " 此指令只有机器人拥有者才能执行!",
     "message-clear-tip": "刪除 ",
     "message-clear-tip-count": " 則訊息",
     "message-cleared": " 则讯息已被删除!",
@@ -59,12 +62,53 @@
     "chat-filter-reason": "不适当言论",
     "send-fail": "讯息发送失败",
     "send-success": "已成功发送讯息",
+    "send-fail-reason": "通常是因为接收方仅接收来自好友的私人讯息",
     "prefix-tip": "命令前缀:",
     "function-enable": "已启用功能",
     "function-disable": "已禁用功能",
     "function-command-enable": "已启用指令",
     "function-command-disable": "已禁用指令",
     "function-None": "无",
+    "set-picture-only-channel": "设定无文字频道\n(仅能传送图片或档案)",
+    "set-chat-filter": "设定聊天过滤器",
+    "set-enter-voice-channel": "设定私人语音频道进入点",
+    "set-voice-category": "设定私人语音频道类别\n(私人语音频道将在此类别创建)",
+    "set-auto-action": "设定自动行动的数量\n(当警告数到达设定值时自动禁言/踢除/封锁)",
+    "set-chat-filter-action": "设定触发聊天过滤器行为\n(当成员触发聊天过滤器时的行为(警告/禁言/踢除/封锁))",
+    "set-music-bot": "设定音乐机器人开启/关闭",
+    "set-commands": "设定各指令开启/关闭\n指令名称可使用 `!function` 查看",
+    "check-chat-filter": "查看聊天过滤器内容",
+    "check-picture-only-channel": "查看无文字频道\n(仅能传送图片或档案)",
+    "check-private-voice-channel": "查看私人语音频道相关讯息",
+    "check-auto-action": "查看自动行动数量\n(当警告数到达设定值时自动禁言/踢除/封锁)",
+    "add-picture-only-channel": "已新增ID至无文字频道",
+    "remove-picture-only-channel": "已移除ID于无文字频道",
+    "add-chat-filter": "已加入表达式至聊天过滤器",
+    "add-chat-filter-next": "接下来请设定触发聊天过滤器行为:\n(当成员触发聊天过滤器时的行为(警告/禁言/踢除/封锁))",
+    "remove-chat-filter": "已移除表达式于聊天过滤器",
+    "add-enter-voice-channel": "已新增ID至私人语音频道进入点",
+    "remove-enter-voice-channel": "已移除ID于私人语音频道进入点",
+    "add-enter-voice-channel-next": "接下来请设定私人语音频道类别:\n(私人语音频道将在此类别创建)",
+    "add-voice-category": "已新增ID至创建私人语音频道类别",
+    "remove-voice-category": "已移除ID于创建私人语音频道类别",
+    "chat-filter-info": "聊天内容包含以下表达式将被删除:",
+    "picture-only-channel-info": "以下频道仅能传送图片或档案:",
+    "private-voice-channel-info": "进入以下语音频道时将创立私人语音频道:",
+    "auto-action-info": "当成员的警告数量到达以下数量时自动禁言/踢除/封锁:",
+    "private-voice-channel-category-info": "私人语音频道将创立于:",
+    "add-auto-action": "已设定自动行动数量:",
+    "set-auto-mute": "自动禁言 ",
+    "set-auto-kick": "\n自动踢除 ",
+    "set-auto-ban": "\n自动封锁 ",
+    "add-auto-action-error-1": "自动踢除数量不可小于自动禁言数量!",
+    "add-auto-action-error-2": "自动封锁数量不可小于自动踢除数量!",
+    "add-chat-filter-action": "已设定触发聊天过滤器行为:",
+    "set-music-bot-true": "已开启音乐机器人功能",
+    "set-music-bot-false": "已关闭音乐机器人功能",
+    "set-command-error": "请输入正确的指令名称",
+    "set-command-to": " 指令功能已设定为 ",
+    "command-disabled": " 该指令功能已被关闭",
+    "command-set-tip": "使用 `.set` 来开启此指令",
 
     "user-info": "成员资讯",
     "user-info-name": "名称",
@@ -87,6 +131,7 @@
     "next-page": "下一页",
     "previous-page": "上一页",
     "menu-music": "音乐机器人指令",
+    "menu-message-add": "新增 ID / 文字 至特定功能",
     "menu-message-addadmin": "新增一位成员至管理员名单",
     "menu-message-addbypass": "新增一位成员至绕过名单",
     "menu-message-ban": "封锁一位成员",
@@ -98,14 +143,17 @@
     "menu-message-clearwarn": "清除某成员警告",
     "menu-message-cd": "删除当前频道",
     "menu-message-ci": "让其他成员无法查看此频道",
+    "menu-message-check": "查看特定功能",
     "menu-message-exit": "结束机器人程式",
     "menu-message-gay": "获取成员同性恋值",
     "menu-message-kick": "从伺服器踢出一位玩家",
     "menu-message-mute": "将一位成员禁言",
     "menu-message-ping": "ping 一个 IP 位置",
     "menu-message-reload": "重新加载设定及语言档",
+    "menu-message-remove": "移除 ID / 文字 于特定功能",
     "menu-message-removeadmin": "从管理员名单中移除一位成员",
     "menu-message-removebypass": "从绕过名单中移除一位成员",
+    "menu-message-set": "伺服器设定",
     "menu-message-showwarn": "显示某成员的警告数量",
     "menu-message-slowmoe": "设置频道慢速模式",
     "menu-message-send": "使用机器人传送私人讯息",
@@ -185,16 +233,23 @@
     "debug-enabled": "侦错模式: 开启",
     "debug-disabled": "侦错模式: 关闭",
     "version": "当前版本:",
+    "view-more_info": "查看更多资讯",
     "@user": " [@使用者]",
     "message": " [讯息]",
     "language": " [语言档名称]",
     "count": " [数量]",
     "reason": " (原因)",
     "someone's": " 的",
-    "category": " [频道ID]",
+    "channel": " [频道ID]",
+    "category": " [类别ID]",
     "duration": " [持续时间]",
+    "regex": " [文字(使用正规表达式)/default]",
+    "action": " [None/warn/mute/kick/ban]",
     "enable": "开启",
     "disable": "关闭",
+    "by": "操作者:",
+    "true_or_false": " [true/false]",
+    "command": " [指令名称]",
 
     "ping-timeout": "要求等候逾时",
     "with_32_bytes": "(使用 32 位元组的资料)",
@@ -207,5 +262,10 @@
     "ping_stat": "Ping 统计资料:",
     "packet": "封包: 已传送 = 4，已收到 = ",
     "lost": "，已遗失 = ",
-    "lost_%": "% 遗失"
+    "lost_%": "% 遗失",
+
+    "safety_check": "安全性检查",
+    "google_check": " 经 Google 检查后为:",
+    "somesafe": " **部份不安全**",
+    "unsafe": " **不安全**"
 }
