--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -1,7 +1,10 @@
 {
     "login-name": "目前登入身份：",
+    "server-added": "已加入伺服器:",
+    "member-count": "總觸及人數:",
     "create-channel-name": " 的頻道",
     "when-channel-create": " 建立了臨時語音頻道",
+    "unknown-command": "**`未知的指令. 使用 \".menu\" 來獲得幫助`**",
     "usage": " 用法:",
     "uses": " 用途:",
     "temp-message": " 發送一個臨時訊息",
@@ -11,11 +14,11 @@
     "activity-changed": " 機器人狀態已更改為",
     "channel-copied": " 頻道已被複製",
     "channel-copied-deleted": " 頻道已被複製及刪除",
-    "reloaded": " 設定檔及語言檔已重新加載!",
+    "reloaded": " 所有設定及語言檔已重新加載!",
     "permission-error": " 拒絕不符權限的操作",
     "language-error": " 該語言檔不存在!",
     "reset-error": " 此指令需開啟偵錯模式才能執行!",
-    "not-owner": " 此指令只有伺服器擁有者才能執行!",
+    "not-owner": " 此指令只有機器人擁有者才能執行!",
     "message-clear-tip": "刪除 ",
     "message-clear-tip-count": " 則訊息",
     "message-cleared": " 則訊息已被刪除!",
@@ -59,12 +62,53 @@
     "chat-filter-reason": "不適當言論",
     "send-fail": "訊息發送失敗",
     "send-success": "已成功發送訊息",
+    "send-fail-reason": "通常是因為接收方僅接收來自好友的私人訊息",
     "prefix-tip": "命令前綴:",
     "function-enable": "已啟用功能",
     "function-disable": "已禁用功能",
     "function-command-enable": "已啟用指令",
     "function-command-disable": "已禁用指令",
     "function-None": "無",
+    "set-picture-only-channel": "設定無文字頻道\n(僅能傳送圖片或檔案)",
+    "set-chat-filter": "設定聊天過濾器",
+    "set-enter-voice-channel": "設定私人語音頻道進入點",
+    "set-voice-category": "設定私人語音頻道類別\n(私人語音頻道將在此類別創建)",
+    "set-auto-action": "設定自動行動的數量\n(當警告數到達設定值時自動禁言/踢除/封鎖)",
+    "set-chat-filter-action": "設定觸發聊天過濾器行為\n(當成員觸發聊天過濾器時的行為(警告/禁言/踢除/封鎖))",
+    "set-music-bot": "設定音樂機器人開啟/關閉",
+    "set-commands": "設定各指令開啟/關閉\n指令名稱可使用 `!function` 查看",
+    "check-chat-filter": "查看聊天過濾器內容",
+    "check-picture-only-channel": "查看無文字頻道\n(僅能傳送圖片或檔案)",
+    "check-private-voice-channel": "查看私人語音頻道相關訊息",
+    "check-auto-action": "查看自動行動數量\n(當警告數到達設定值時自動禁言/踢除/封鎖)",
+    "add-picture-only-channel": "已新增ID至無文字頻道",
+    "remove-picture-only-channel": "已移除ID於無文字頻道",
+    "add-chat-filter": "已加入表達式至聊天過濾器",
+    "add-chat-filter-next": "接下來請設定觸發聊天過濾器行為:\n(當成員觸發聊天過濾器時的行為(警告/禁言/踢除/封鎖))",
+    "remove-chat-filter": "已移除表達式於聊天過濾器",
+    "add-enter-voice-channel": "已新增ID至私人語音頻道進入點",
+    "remove-enter-voice-channel": "已移除ID於私人語音頻道進入點",
+    "add-enter-voice-channel-next": "接下來請設定私人語音頻道類別:\n(私人語音頻道將在此類別創建)",
+    "add-voice-category": "已新增ID至創建私人語音頻道類別",
+    "remove-voice-category": "已移除ID於創建私人語音頻道類別",
+    "chat-filter-info": "聊天內容包含以下表達式將被刪除:",
+    "picture-only-channel-info": "以下頻道僅能傳送圖片或檔案:",
+    "private-voice-channel-info": "進入以下語音頻道時將創立私人語音頻道:",
+    "auto-action-info": "當成員的警告數量到達以下數量時自動禁言/踢除/封鎖:",
+    "private-voice-channel-category-info": "私人語音頻道將創立於:",
+    "add-auto-action": "已設定自動行動數量:",
+    "set-auto-mute": "自動禁言 ",
+    "set-auto-kick": "\n自動踢除 ",
+    "set-auto-ban": "\n自動封鎖 ",
+    "add-auto-action-error-1": "自動踢除數量不可小於自動禁言數量!",
+    "add-auto-action-error-2": "自動封鎖數量不可小於自動踢除數量!",
+    "add-chat-filter-action": "已設定觸發聊天過濾器行為:",
+    "set-music-bot-true": "已開啟音樂機器人功能",
+    "set-music-bot-false": "已關閉音樂機器人功能",
+    "set-command-error": "請輸入正確的指令名稱",
+    "set-command-to": " 指令功能已設定為 ",
+    "command-disabled": " 該指令功能已被關閉",
+    "command-set-tip": "使用 `.set` 來開啟此指令",
 
     "user-info": "成員資訊",
     "user-info-name": "名稱",
@@ -87,6 +131,7 @@
     "next-page": "下一頁",
     "previous-page": "上一頁",
     "menu-music": "音樂機器人指令",
+    "menu-message-add": "新增 ID / 文字 至特定功能",
     "menu-message-addadmin": "新增一位成員至管理員名單",
     "menu-message-addbypass": "新增一位成員至繞過名單",
     "menu-message-ban": "封鎖一位成員",
@@ -98,14 +143,17 @@
     "menu-message-clearwarn": "清除某成員警告",
     "menu-message-cd": "刪除當前頻道",
     "menu-message-ci": "讓其他成員無法查看此頻道",
+    "menu-message-check": "查看特定功能",
     "menu-message-exit": "結束機器人程式",
     "menu-message-gay": "獲取成員同性戀值",
     "menu-message-kick": "從伺服器踢出一位玩家",
     "menu-message-mute": "將一位成員禁言",
     "menu-message-ping": "ping 一個 IP 位置",
     "menu-message-reload": "重新加載設定及語言檔",
+    "menu-message-remove": "移除 ID / 文字 於特定功能",
     "menu-message-removeadmin": "從管理員名單中移除一位成員",
     "menu-message-removebypass": "從繞過名單中移除一位成員",
+    "menu-message-set": "伺服器設定",
     "menu-message-showwarn": "顯示某成員的警告數量",
     "menu-message-slowmoe": "設置頻道慢速模式",
     "menu-message-send": "使用機器人傳送私人訊息",
@@ -185,16 +233,23 @@
     "debug-enabled": "偵錯模式: 開啟",
     "debug-disabled": "偵錯模式: 關閉",
     "version": "當前版本:",
+    "view-more_info": "查看更多資訊",
     "@user": " [@使用者]",
     "message": " [訊息]",
     "language": " [語言檔名稱]",
     "count": " [數量]",
     "reason": " (原因)",
     "someone's": " 的",
-    "category": " [頻道ID]",
+    "channel": " [頻道ID]",
+    "category": " [類別ID]",
     "duration": " [持續時間]",
+    "regex": " [文字(使用正規表達式)/default]",
+    "action": " [None/warn/mute/kick/ban]",
     "enable": "開啟",
     "disable": "關閉",
+    "by": "操作者:",
+    "true_or_false": " [true/false]",
+    "command": " [指令名稱]",
 
     "ping-timeout": "要求等候逾時",
     "with_32_bytes": "(使用 32 位元組的資料)",
@@ -207,5 +262,10 @@
     "ping_stat": "Ping 統計資料:",
     "packet": "封包: 已傳送 = 4，已收到 = ",
     "lost": "，已遺失 = ",
-    "lost_%": "% 遺失"
+    "lost_%": "% 遺失",
+
+    "safety_check": "安全性檢查",
+    "google_check": " 經 Google 檢查後為:",
+    "somesafe": " **部份不安全**",
+    "unsafe": " **不安全**"
 }
